...
    <string name="airwallex_empty_country_code">Please select a country</string>
    <string name="airwallex_empty_last_name">Please enter your last name</string>
    <string name="airwallex_empty_first_name">Please enter your first name</string>
    <string name="airwallex_delete_payment_method_prompt_title">Would you like to delete this payment consent?</string>
    <string name="airwallex_delete_payment_method_positive">Delete</string>
    <string name="airwallex_delete_payment_method_negative">Cancel</string>
    <string name="airwallex_new_card">Card</string>
    <string name="airwallex_billing_info">Billing info</string>
    <string name="airwallex_billing_country_or_region">Billing country or region</string>
    <string name="airwallex_shipping">Shipping</string>
    <string name="airwallex_total">Total %s</string>
    <string name="airwallex_pay_now">Pay</string>
    <string name="airwallex_confirm">Confirm</string>
    <string name="airwallex_payment_methods">Payment methods</string>
    <string name="airwallex_cvc_hint" translatable="false">CVC/CVV</string>
    <string name="airwallex_card_name_hint">Name on card</string>
    <string name="airwallex_email_hint">Email</string>
    <string name="airwallex_empty_card_number">Please enter your card number</string>
    <string name="airwallex_invalid_card_number">Card number is invalid</string>
    <string name="airwallex_unsupported_card_number">Card not supported for payment</string>
    <string name="airwallex_save_card">Save this card for future payments</string>
    <string name="airwallex_save_union_pay_card">For UnionPay, only credit cards can be saved. Click “Pay” to proceed with a one time payment or use another card if you would like to save it for future use.</string>
    <string name="airwallex_same_as_shipping">Same as shipping address</string>
    <string name="airwallex_valid_digits" translatable="false">0123456789</string>
    <string name="airwallex_empty_card_name">Please enter your card name</string>
    <string name="airwallex_empty_expiry">Please enter your card expiry date</string>
    <string name="airwallex_invalid_expiry_date">Please enter a valid expiry date</string>
    <string name="airwallex_empty_cvc">Please enter your card CVC/CVV</string>
    <string name="airwallex_invalid_cvc">Please enter a valid security code</string>
    <string name="airwallex_empty_email">Please enter your email address</string>
    <string name="airwallex_card_number_label">Card number</string>
    <string name="airwallex_card_number_placeholder" translatable="false">1234 1234 1234 1234</string>
    <string name="airwallex_expires_hint" translatable="false">MM/YY</string>
    <string name="airwallex_invalid_email">Please enter valid email</string>
    <string name="airwallex_select_your_bank">Select your bank</string>
    <string name="airwallex_invalid_field">Invalid %s</string>
    <string name="airwallex_or_pay_with">Or pay with</string>
    <string name="airwallex_card_information_title">Card information</string>
    <string name="airwallex_add_card_screen_title">Add new</string>
...
