...
                    if (it) {
                        AnalyticsLogger.logAction("save_card")
                    }
                },
                modifier = Modifier
                    .semantics { testTagsAsResourceId = true }
                    .testTag(if (isSaveCardChecked) "card-saving-toggle-checked" else "card-saving-toggle-unchecked")
            )

            AnimatedVisibility(
                visible = isSaveCardChecked && brand == CardBrand.UnionPay,
                modifier = Modifier.padding(top = 12.dp),
            ) {
...
