...
 * you can flexibly organize your own UI based on these APIs.
 */
class APIIntegrationActivity : BasePaymentTypeActivity<APIIntegrationViewModel>() {

    override fun initView() {
        super.initView()
        mBinding.headerView.setTitle("Integrate with low-level API")
    }

    override fun getViewModelClass(): Class<APIIntegrationViewModel> {
        return APIIntegrationViewModel::class.java
    }

...
                "Pay with card and trigger 3DS"
            ), // Available only in non-production environments
            ButtonItem(PAY_WITH_GOOGLE_PAY, "Pay with Google Pay"),
            ButtonItem(GOOGLE_PAY_3DS, "Google Pay 3DS"),
            ButtonItem(REDIRECT_PAYMENT, "Redirect Payment"), // Only visible for "One-off payment"
            ButtonItem(GET_PAYMENT_METHODS, "Get payment methods"),
            ButtonItem(GET_SAVED_CARDS, "Get saved cards")
        )

        val filteredButtons = fullButtonList.filter { item ->
            when (item.id) {
                PAY_WITH_3DS -> Settings.getEnvironment() != Environment.PRODUCTION// Hide "3DS" in PRODUCTION
                PAY_WITH_CARD_AND_SAVE -> selectedOption != 1 // Hide "Pay with card and save" in "Recurring" mode
...
